# jobfetcher

./: .gitignore  GEMINI.md  README.md  config.json  pyproject.toml
jobfetcher/: aggregator.py  analyzer.py  config.py  dedupe.py  main.py  models.py  paths.py  reports.py  title_filter.py  years.py
scripts/: daily_run.sh  scrape_playwright.py
tests/: test_aggregation_stats.py  test_aggregator.py  test_analyzer.py  test_analyzer_outputs.py  test_dedupe.py  test_market_analysis.py  test_match_score.py  test_models.py  test_paths.py  test_profile_filter.py  test_reports.py  test_title_filter.py  test_years.py
